--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -425,7 +425,7 @@ print(coverage_800)
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="サンプルサイズ設計"}
+::: {.callout-note title="サンプルサイズ設計の2つのアプローチ"}
 研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
 
 信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
