--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -387,7 +387,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ::: voice-father
 お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアやRを利用することになる。
-powerSurvEpiパッケージで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:!、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
+powerSurvEpiパッケージで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:1、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
 :::
 
 :::::::::::::::::::::::::::::::::
@@ -427,7 +427,7 @@ ssizeCT.default(
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100人から177人、202に変化するみたいだね」
+お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100+100人から19+118人、41+161人に変化するみたいだね」
 :::
 
 
@@ -436,7 +436,7 @@ ssizeCT.default(
 :::
 
 ::: voice-father
-お父さん「焦らなくていいよ。真剣に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
+お父さん「気持ちはわかるよ。真剣に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -459,7 +459,7 @@ ssizeCT.default(
 
 ### 文献
 
-- [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022]（https://www.kyoto-up.or.jp/9784814003822.html）
+- [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022](https://www.kyoto-up.or.jp/9784814003822.html)
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
 
