--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -142,7 +142,7 @@ a:hover {
 # Story and Quiz − Epidemiology I
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, observational study, paper writing
+　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, observational study, paper writing
 :::
 
 ------------------------------------------------------------------------
@@ -210,11 +210,19 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー、ワクチン有効率はイメージしてたパーセントじゃないね。でも、確かにパーセントが単位だとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
+私「へー、ワクチン有効率はイメージしてたパーセントじゃないね。リスク比をちょっといじっただけじゃない。でも、"有効率"っていわれたり、パーセントが単位だと、いわゆる割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
 :::
 
 ::: voice-father
-お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ」
+お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ。それにね、この数字には数式よりずっと本質的な意味がある」
+:::
+
+::: voice-daughter
+私「なによ、持って回った言い方して、授業じゃないんだから」
+:::
+
+::: voice-father
+お父さん「いや、聞けばすぐわかるよ。ワクチン有効率の数字は、臨床データから推定されたものでしょ。たくさんの参加者を対象に臨床試験を行って、実際に観察された結果を、ぎゅっと要約したものが、この数字なんだ。でも、データ上でどんな結果が観察されたか、ワクチン有効率だけでは伝わらないでしょ。こういうのを"数字が独り歩きする"っていうんだ」
 :::
 
 ::: voice-daughter
@@ -222,7 +230,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そう。でも日常会話でそんなこと気にしてられないでしょ。だから誤解が多い。パーセント表記が逆に誤解を生んでる疫学の指標は、他にもあるよ」
+お父さん「でも日常会話でそんなこと気にしてられないでしょ。だから誤解が多い。パーセント表記が逆に誤解を生んでる疫学の指標は、他にもあるよ」
 :::
 
 ::::::::::::::::::::::::::::::::: 
@@ -251,7 +259,7 @@ $\pi_1 = 10/1000 = 0.01$
 
 $\pi_2 = 200/1000 = 0.2$ 
 
-$VF=\frac{\pi_2-\pi_1}{\pi_2}=95%$
+$VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 :::
 
 ### Continuation of their story
