--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -199,10 +199,12 @@ a:hover {
 | Excess fraction（寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
 | Preventable fraction（予防寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
 | Population attributable fraction（集団寄与割合） | **全員**（集団全体） | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
+:::
 
-**数値例**
 
-いくつかの指標の数値例を示しておきましょう。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
+::: {.callout-note title="コホート研究の数値例"}
+
+リスクや効果の指標について数値例をみるとイメージしやすいと思います。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
 
 |                   | 曝露あり | 曝露なし | 効果の指標 |
 |-------------------|----------|----------|------------|
@@ -332,11 +334,11 @@ a:hover {
 
 この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
 
-この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を*p*で書くと、population attributable fractionは、以下の式で表されます。
+この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を$p$で書くと、population attributable fractionは、以下の式で表されます。
 
 $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
-がん検診の例では、*p*=0.5、15年死亡リスク比は*RR*=2なので、これを代入すると、*PAF*=0.5(2-1)/{0.5(2-1)+1}=0.33となり、上の正解と一致します。
+がん検診の例では、$p=0.5$、15年死亡リスク比は$RR=2$なので、これを代入すると、$PAF=0.5(2-1)/{0.5(2-1)+1}=0.33$となり、上の正解と一致します。
 :::
 
 ### Continuation of their story
