--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -179,7 +179,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「えーっと、教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
+お父さん「えーっと、リスク比が変化しないわけじゃなくて...。ちょっとナプキンとペンをとってくれる？教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -188,20 +188,15 @@ a:hover {
 ::: {.callout-note title="生存曲線とハザードの関係"}
 Kaplan-Meier曲線もまた、割合の一種と考えることができますが、見え方がずいぶん違います。つまり、Kaplan-Meier曲線はグラフですし、時間の概念が含まれたりします。さらに、Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法ですし、ハザード比との関係が重要です。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
 
-Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（*x*軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間*x*の関数*S*(*x*)で表す」ということになります。
+Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（$x$軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間$x$の関数$S(x)$で表す」ということになります。
 
-関数*S*(*x*)を具体的に書くこともできます。生存時間が、ハザードが時間を通じて一定ということは、指数分布に従うと仮定したことになります（これはKaplan-Meier曲線とは別ものです）。指数分布の形状を決めるパラメータ（ハザード）を、*λ*で表します。このとき指数分布の生存関数とハザードには、以下のような関係があります。
+関数$S(x)$を具体的に書くこともできます。生存時間が、ハザードが時間を通じて一定ということは、指数分布に従うと仮定したことになります（これはKaplan-Meier曲線とは別ものです）。指数分布の形状を決めるパラメータ（ハザード）は、$λ$という記号で表すことが普通です。このとき指数分布の生存関数とハザードには、以下のような関係があります。
 
 $S(x)=\mathrm{exp}(-\lambda x)$
 
-さて、ハザードは生存曲線が下がるスピードを決める数値です。生存時間がどのくらいの長さなのかは、中央値で測ることができます。生存時間中央値*M*は、生存確率50%つまり*S*(*x*)=0.5になるような時間*x*のことです。つまり、指数分布では$0.5=\mathrm{exp}(-\lambda M)$と関係が成り立つので、生存時間中央値*M*は、ハザード*λ*から以下のように計算することができます。
-
-$M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
-
-最後に、時点*x*の疾患リスクを*π*とすると、リスクとハザードは、以下の式で結びついています。
+ここまでくれば簡単なのですが、最後に、疾患リスクとハザードの関係を確認しましょう。疾患リスク$π$は、特定時点$x$までに疾患を発症する確率を表しています。つまり、疾患リスク$π$とハザード$λ$は、時点$x$の生存関数を$S(x)$を介して、以下の式で結びついています。
 
 $\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
-
 
 ```{r echo=FALSE, warning=FALSE}
 generate_data <- function(n=200, hr1, hr2) {
@@ -251,7 +246,7 @@ generate_data <- function(n=200, hr1, hr2) {
 }
 ```
 
-イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線をもう一度示しておきます。
+イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線を置いておきます。
 
 ```{r warning=FALSE}
 # devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
@@ -273,14 +268,34 @@ cifplot(Event(time_os, status_os) ~ stoma,
 :::
 
 ::: voice-father
-お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ。次にハザード比」
+お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだと思うんだけど。ハザードを具体的に考えるときは、生存時間中央値と結びつけるのが手だよ」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note title="ハザードと生存時間中央値の関係"}
+さて、ハザードは生存曲線が下がるスピードを決める数値です。生存時間がどのくらいの長さなのかは、中央値で測ることができます。生存時間中央値$M$は、生存確率50%つまり$S(x)=0.5$になるような時間$x$のことです。つまり、指数分布では
+
+$0.5=\mathrm{exp}(-\lambda M)$
+
+と関係が成り立つので、生存時間中央値$M$は、ハザード$λ$から以下のように計算することができます。
+
+$M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「あ、これはちょっとわかった気がする寿命が2倍になったらハザードは1/2ってことね」
+:::
+
+::: voice-father
+お父さん「そうだね、指数分布の下で計算すると、だけどね。ハザード比は、まさにハザードの比によって、集団ごとの生存曲線を比較する指標なんだ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
 
 ::: {.callout-note title="リスクとハザード比の関係"}
 
-群1と群2のアウトカムを比較する状況を考えましょう。群1の時点*x*の疾患リスクを$\pi_1$、群2の時点*x*の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
+群1と群2のアウトカムを比較する状況を考えましょう。群1の時点$x$の疾患リスクを$\pi_1$、群2の時点$x$の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
 
 上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
 
@@ -298,11 +313,11 @@ cifplot(Event(time_os, status_os) ~ stoma,
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「はっきりいうとね、ハザードが直感的にわかる人の方が少ないよ。だから安心していい」
+お父さん「はっきりいうとね、ハザードやハザード比が直感的にわかる人の方が少ないよ。だから安心していい」
 :::
 
 ::: voice-daughter
-娘「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
+私「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
 :::
 
 ::: voice-father
@@ -310,7 +325,7 @@ cifplot(Event(time_os, status_os) ~ stoma,
 :::
 
 ::: voice-daughter
-娘「見えない時計？」
+私「見えない時計？」
 :::
 
 ::: voice-father
@@ -318,7 +333,7 @@ cifplot(Event(time_os, status_os) ~ stoma,
 :::
 
 ::: voice-daughter
-娘「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
+私「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
 :::
 
 ::: voice-father
@@ -326,16 +341,15 @@ cifplot(Event(time_os, status_os) ~ stoma,
 :::
 
 ::: voice-daughter
-娘「それ、実際の患者さんでもあるかも！」
+私「それ、実際の患者さんでもあるかも！」
 :::
 
 ::: voice-father
 お父さん「それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
 :::
-
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="シミュレーションデータにおける時点ごとのリスク比の推定"}
-
 
 さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
 
