--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -142,7 +142,7 @@ a:hover {
 # Story and Quiz − Clinical trial IV
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: sample size calculation, clinical trial, observational study
+　　　　　　　　　　　　Keywords: sample size calculation, clinical trial, observational study
 :::
 
 ------------------------------------------------------------------------
@@ -481,6 +481,8 @@ ssizeCT.default(
 
 [Clinical trial III](clinical-trial-3.qmd)
 
+[Clinical trial IV](clinical-trial-4.qmd)
+
 [Epidemiology I](epidemiology-1.qmd)
 
 [Epidemiology II](epidemiology-2.qmd)
@@ -488,6 +490,8 @@ ssizeCT.default(
 [Epidemiology III](epidemiology-3.qmd)
 
 [Epidemiology IV](epidemiology-4.qmd)
+
+[Epidemiology V](epidemiology-5.qmd)
 
 [Regression I](logistic-regression-1.qmd)
 
