--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -142,7 +142,7 @@ a:hover {
 # Story and Quiz − Epidemiology IV
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, paper writing
+　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, paper writing
 :::
 
 ------------------------------------------------------------------------
@@ -265,6 +265,8 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 
 [Clinical trial III](clinical-trial-3.qmd)
 
+[Clinical trial IV](clinical-trial-4.qmd)
+
 [Epidemiology I](epidemiology-1.qmd)
 
 [Epidemiology II](epidemiology-2.qmd)
@@ -272,6 +274,8 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 [Epidemiology III](epidemiology-3.qmd)
 
 [Epidemiology IV](epidemiology-4.qmd)
+
+[Epidemiology V](epidemiology-5.qmd)
 
 [Regression I](logistic-regression-1.qmd)
 
