--- a/jp/epidemiology-5.qmd
+++ b/jp/epidemiology-5.qmd
@@ -142,7 +142,7 @@ a:hover {
 # Story and Quiz − Epidemiology V
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, paper writing
+　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, paper writing
 :::
 
 ------------------------------------------------------------------------
@@ -234,13 +234,17 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論になる」
+お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
+
+::: voice-daughter
+私「じゃあどうしたらいいのよ」
+:::
+
+::: voice-father
+お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差やKaplan-Meier曲線）と相対指標（リスク比やハザード比）の両方を示したり、生存曲線でグラフにするのが正解なんじゃないかな」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-
-
-臨床研究の結果報告では、絶対指標（リスク差やKaplan-Meier曲線）と相対指標（リスク比やハザード比）の両方を示す
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
@@ -278,6 +282,8 @@ a:hover {
 
 [Clinical trial III](clinical-trial-3.qmd)
 
+[Clinical trial IV](clinical-trial-4.qmd)
+
 [Epidemiology I](epidemiology-1.qmd)
 
 [Epidemiology II](epidemiology-2.qmd)
@@ -285,6 +291,8 @@ a:hover {
 [Epidemiology III](epidemiology-3.qmd)
 
 [Epidemiology IV](epidemiology-4.qmd)
+
+[Epidemiology V](epidemiology-5.qmd)
 
 [Regression I](logistic-regression-1.qmd)
 
