--- a/jp/epidemiology-5.qmd
+++ b/jp/epidemiology-5.qmd
@@ -179,6 +179,10 @@ a:hover {
 これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、併合可能（collapsible）と呼んでいます。
 
 一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。リスク比は一定であるにも関わらず、同じ比の指標がばらつくのは、好ましい性質ではありません。
+:::
+
+::: panel-tabset
+### ステージによる層別前
 
 表1. がん患者100人を対象にした仮想的なランダム化臨床試験における死亡リスクとリスク差・リスク比・オッズ比
 
@@ -191,6 +195,8 @@ a:hover {
 | 　リスク差    |            |                | -30%       |
 | 　リスク比    |            |                | 0.50倍     |
 | 　オッズ比    |            |                | 0.29倍     |
+
+### ステージによる層別後
 
 表2. 層別後の死亡リスクとリスク差・リスク比・オッズ比
 
@@ -211,6 +217,7 @@ a:hover {
 | 　リスク比          |            |                | 0.50倍     |
 | 　オッズ比          |            |                | 0.17倍     |
 :::
+
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
