--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -284,11 +284,11 @@ $M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「あ、これはちょっとわかった気がする寿命が2倍になったらハザードは1/2ってことね」
+私「あ、これはちょっとわかった気がする。寿命（生存時間中央値）とハザードが逆数の関係ってことね。つまり寿命が2倍になったらハザードは1/2になる」
 :::
 
 ::: voice-father
-お父さん「そうだね、指数分布の下で計算すると、だけどね。ハザード比は、まさにハザードの比によって、集団ごとの生存曲線を比較する指標なんだ」
+お父さん「そうだね、指数分布の下で計算すると、だけどね。ハザード比は、まさにハザードの比をとることで、2つの集団の生存曲線を比較する指標なんだ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -369,7 +369,6 @@ summary(rr_at_20)
 
 ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
 :::
-::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
