--- a/jp/epidemiology-5.qmd
+++ b/jp/epidemiology-5.qmd
@@ -147,124 +147,100 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### リスク差とリスク比、どっちを使う？
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「医学部で習ったことがあるかもしれないけど、コホート研究とリスクが疫学の基本なんだ。だから公衆衛生や臨床研究をしている人の間では、オッズ比よりリスク比の方がわかりやすいとされている。一方でね、統計学で注目するのは、それぞれの指標の数学的な性質なんだ。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じって言ったらいいかな」
-:::
-
-::: voice-daughter
-私「ふーんそうなんだ」
-:::
-
-::: voice-father
-お父さん「後は、ケース・コントロール研究のような、コホートの一部の情報しかない状況でも計算できるし、ロジスティック回帰のようなモデリングするとき利用しやすいのがいいところかな。悪い面はね、層別解析をしたとき、ちょっと不自然な計算結果になる」
-:::
-
-::: voice-daughter
-私「へー。それは困るじゃない。層別なんてしたことないけど」**
-:::
-
-::: voice-father
-お父さん「次の2つの表を比べてみてよ」
-:::
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note title="層別した指標の併合可能性"}
-表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
-
-まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
-
-これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、併合可能（collapsible）と呼んでいます。
-
-一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。リスク比は一定であるにも関わらず、同じ比の指標がばらつくのは、好ましい性質ではありません。
-:::
-
-::: panel-tabset
-### ステージによる層別前
-
-表1. がん患者100人を対象にした仮想的なランダム化臨床試験における死亡リスクとリスク差・リスク比・オッズ比
-
-|               | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
-|---------------|------------|----------------|------------|
-| 合計（100人） |            |                |            |
-| 　死亡        | 30         | 15             |            |
-| 　生存        | 20         | 35             |            |
-| 　死亡リスク  | 60%        | 30%            |            |
-| 　リスク差    |            |                | -30%       |
-| 　リスク比    |            |                | 0.50倍     |
-| 　オッズ比    |            |                | 0.29倍     |
-
-### ステージによる層別後
-
-表2. 層別後の死亡リスクとリスク差・リスク比・オッズ比
-
-|                     | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
-|---------------------|------------|----------------|------------|
-| ステージIII（50人） |            |                |            |
-| 　死亡              | 10         | 5              |            |
-| 　生存              | 15         | 20             |            |
-| 　死亡リスク        | 40%        | 20%            |            |
-| 　リスク差          |            |                | -20%       |
-| 　リスク比          |            |                | 0.50倍     |
-| 　オッズ比          |            |                | 0.38倍     |
-| ステージIV（50人）  |            |                |            |
-| 　死亡              | 20         | 10             |            |
-| 　生存              | 5          | 15             |            |
-| 　死亡リスク        | 80%        | 40%            |            |
-| 　リスク差          |            |                | -40%       |
-| 　リスク比          |            |                | 0.50倍     |
-| 　オッズ比          |            |                | 0.17倍     |
-:::
-
+### リスク比とオッズ比って同じだっけ
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ていうかさ。どうせ割合同士を比べるんだから、わざわざ比を計算する必要ないと思うんだけど。パーセントの差でよくない？＋10%とか－10%とか。じゅうぶんでしょ」**
+私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、リスク比とかオッズ比とか計算したなあ。リスク比とオッズ比って結局同じ？みたいな」
 :::
 
 ::: voice-father
-お父さん「うん、リスク差はもっと使われていいと思う。でも、リスク差にも欠点がある。複数の研究を集めてメタアナリシスをするとき、それぞれの研究から得られたリスク差やリスク比をひとつの値に要約するでしょ」
+お父さん「ああ、この前、膵がんの数値例で計算したとき、リスク比とオッズ比はどちらも3倍だったね。でも、これはたまたま。もっと正確にいうと、膵がんのようにリスクが低いと、リスク比とオッズ比は近い値になるんだ。ほら、リスク比とオッズ比の数式を見比べてよ。リスク比とオッズ比の違いって、$1-\pi_1$と$1-\pi_2$があるかどうかでしょ。リスクが低いと、ここがほとんど1になるから、リスク比とオッズ比の差がなくなる」
 :::
 
 ::: voice-daughter
-私「ああ、みたことある」
+私「まあ、私も論文読むとき別に区別してないけど」
 :::
 
 ::: voice-father
-お父さん「このとき問題になるのが、コントロール群（プラセボ群や緩和療法群）で観察されたリスクが、研究によって低かったり高かったりすることなんだ。同じ疾患や治療を扱っていても、予後のいい患者ばかり集めた研究もあれば、予後の悪い患者を対象にした研究もあるでしょ」
+お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、オッズ比の平方根を報告した方がいいっていうものもある」
 :::
 
 ::: voice-daughter
-私「そりゃあるよね」
-:::
-
-::: voice-father
-お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
-
-::: voice-daughter
-私「じゃあどうしたらいいのよ」
-:::
-
-::: voice-father
-お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差やKaplan-Meier曲線）と相対指標（リスク比やハザード比）の両方を示したり、生存曲線でグラフにするのが正解なんじゃないかな」
+私「なにそれ、またお作法が増えたの？」
 :::
 ::::::::::::::::::::::::::::::::: 
 
+::: {.callout-note title="リスク比はオッズ比の近似か"}
+
+表1は、2群の疾患リスク$\pi_1$と$\pi_2$の数値を0.1から0.9まで動かして、リスク比、オッズ比、オッズ比の平方根（square root of OR）を計算したものです。
+
+$RR=\frac{\pi_1}{\pi_2}$
+
+$OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
+
+$SOR=\sqrt{\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}}$
+
+$\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ比はまったく違う値になることがわかります。リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなります。また、$\pi_1$と$\pi_2$が0.2～0.7の範囲であれば、リスク比とオッズ比の平方根は、高々0.11しか違いません。
+
+2群の疾患リスクを0.1から0.9まで動かしたときのリスク比、オッズ比、オッズ比の平方根
+
+|     | 0.1  | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
+|-----|------|-----|-----|-----|-----|-----|-----|-----|-----|
+| 0.1 | RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
+|     | OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
+|     | SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
+| 0.2 |      |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
+|     |      |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
+|     |      |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
+| 0.3 |      |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
+|     |      |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
+|     |      |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
+| 0.4 |      |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
+|     |      |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
+|     |      |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
+| 0.5 |      |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
+|     |      |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
+|     |      |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
+| 0.6 |      |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
+|     |      |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
+|     |      |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
+| 0.7 |      |     |     |     |     |     |RR=1 | 0.88| 0.78|
+|     |      |     |     |     |     |     |OR=1 | 0.58| 0.26|
+|     |      |     |     |     |     |     |SOR=1| 0.76| 0.51|
+| 0.8 |      |     |     |     |     |     |     |RR=1 | 0.89|
+|     |      |     |     |     |     |     |     |OR=1 | 0.44|
+|     |      |     |     |     |     |     |     |SOR=1| 0.67|
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「平方根なんて論文書くとき勝手に計算していいのかね」
+:::
+
+::: voice-father
+お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。Methodsで説明していれば。でも、ふつうのコホート研究をするんだったら、リスク比を計算するのが素直だと思うけど」
+:::
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note title="ケース・コントロール研究とオッズ比"}
+
+古典的なケース・コントロール研究は、コホートの中から疾患を発生したケースを特定し、疾患を発生しなかったものの中からコントロールを選択し、ケースとコントロールの曝露状況を比較する研究です。言い換えると、この研究デザインでは、一部の集団のみ（ケースとコントロールのみ）について、過去の曝露状況を調査します。そうすると、コホートの一部しか曝露状況がわからないから、曝露群・非曝露群のリスクの分母がわかりませんよね。そこで、リスク比の代わりに「曝露オッズ比」を求める、と疫学の教科書には書かれています。ただし、古典的なケース・コントロール研究とは違い、最近ではデータベースが利用できたり、研究デザインを工夫していたりするため、リスク比を計算できる状況も増えてきています。
+:::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-2値データの解析で用いられるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（回帰係数の指数がオッズ比）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
+リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなるといいました。それでは、2群をオッズ比で比較するときのp値は、リスク比で比較するときのp値より、小さくなる（つまり有意になりやすいので得をする）のでしょうか。実際にデータから計算されたp値だと、検定の種類の選び方に影響されるし、偶然性も入るので、理論上の期待値がどうなるか考えてみてください。
 
-1.  ロジスティック回帰を用いてリスク比を計算できる
-2.  ロジスティック回帰を用いてリスク比を計算できない
+1.  オッズ比のp値は、リスク比のp値より、期待値の上で小さい
+2.  オッズ比のp値は、リスク比のp値より、期待値の上で大きい
+3.  オッズ比のp値は、リスク比のp値と、期待値の上で等しい
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は1です**
+-   **正解は3です**
 
-ロジスティック回帰の共変量に、数値を代入することで、確率を計算することができます。共変量として、2群（たとえば抗がん剤投与群と緩和療法群）を指定すれば、それぞれの群の確率が求まりますよね。その比をとれば、リスク比が計算できます。
+リスク比やオッズ比は最尤法で推定することが普通です。最尤法を用いるとき、検定の性能（検出力など）は、指標の選び方によらず一定です。
 :::
 
 ### 文献
