--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -181,7 +181,15 @@ a:hover {
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="リスクを比較するための基本的な指標"}
-医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。群1で得られた疾患リスク（割合）を$\pi_1$、群2の疾患リスク（割合）を$\pi_2$とすると、2群を比較するために、以下のような指標が用いられます。なお、これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。ここでは群2を基準にとっています。
+医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。割合を理解するための最初のステップは、分割表で集計したデータをイメージすることです。
+
+|          | 群1 | 群2 |
+|----------|-----|-----|
+| 発症あり |  A人|  B人|
+| 発症なし |  C人|  D人|
+|発症リスク|\pi_1|\pi_2|
+
+この表では人数や割合を、具体的な数字ではなく、A、B、C、Dや群1・群2の発症リスク$\pi_1$と$\pi_2$を使って表しています。2群ごとの割合$\pi_1$と$\pi_2$の比較では、以下のような指標が用いられます。
 
 -   リスク差（risk difference、絶対リスク減少）
 
@@ -194,6 +202,8 @@ a:hover {
 -   オッズ比（odds ratio）
 
     $OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
+
+これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。上の式では群2を基準にとっています。
 :::
 
 ::: {.callout-note title="治療後のリスクを比較するための指標"}
@@ -243,6 +253,7 @@ a:hover {
 |----------|------------|------------|
 | 発症あり |        10  |        200 |
 | 発症なし |       990  |        800 |
+|発症リスク|        1%  |        20% |
 
 1.  80%
 2.  90%
