--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -204,9 +204,9 @@ a:hover {
 
 ::: {.callout-note title="コホート研究の数値例"}
 
-リスクや効果の指標について数値例をみるとイメージしやすいと思います。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
+リスクや効果の指標について数値例をみるとイメージしやすいと思います。この表は、 喫煙と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
 
-|                   | 曝露あり | 曝露なし | 効果の指標 |
+|                   | 喫煙あり | 喫煙なし | 効果の指標 |
 |-------------------|----------|----------|------------|
 | 合計              |          |          |            |
 | 　膵がんあり      | 15       | 12       |            |
@@ -216,7 +216,6 @@ a:hover {
 | 　リスク比        |          |          | 3倍        |
 | 　オッズ比        |          |          | 3倍        |
 | 　Excess fraction |          |          | 74%        |
-
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
