--- a/jp/epidemiology-5.qmd
+++ b/jp/epidemiology-5.qmd
@@ -147,11 +147,11 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### リスク比とオッズ比って同じだっけ
+### リスク比とオッズ比って、結局同じ？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、リスク比とかオッズ比とか計算したなあ。リスク比とオッズ比って結局同じ？みたいな」
+私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、オッズ比の計算問題を解いたことがあったなあ。リスク比とオッズ比って結局同じ使い方をするの？みたいな」
 :::
 
 ::: voice-father
@@ -183,43 +183,51 @@ $SOR=\sqrt{\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}}$
 
 $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ比はまったく違う値になることがわかります。リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなります。また、$\pi_1$と$\pi_2$が0.2～0.7の範囲であれば、リスク比とオッズ比の平方根は、高々0.11しか違いません。
 
-2群の疾患リスクを0.1から0.9まで動かしたときのリスク比、オッズ比、オッズ比の平方根
+2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
 
-|     | 0.1  | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
-|-----|------|-----|-----|-----|-----|-----|-----|-----|-----|
-| 0.1 | RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
-|     | OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
-|     | SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
-| 0.2 |      |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
-|     |      |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
-|     |      |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
-| 0.3 |      |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
-|     |      |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
-|     |      |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
-| 0.4 |      |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
-|     |      |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
-|     |      |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
-| 0.5 |      |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
-|     |      |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
-|     |      |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
-| 0.6 |      |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
-|     |      |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
-|     |      |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
-| 0.7 |      |     |     |     |     |     |RR=1 | 0.88| 0.78|
-|     |      |     |     |     |     |     |OR=1 | 0.58| 0.26|
-|     |      |     |     |     |     |     |SOR=1| 0.76| 0.51|
-| 0.8 |      |     |     |     |     |     |     |RR=1 | 0.89|
-|     |      |     |     |     |     |     |     |OR=1 | 0.44|
-|     |      |     |     |     |     |     |     |SOR=1| 0.67|
+|     | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
+|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
+| 0.1 |RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
+|     |OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
+|     |SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
+| 0.2 |     |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
+|     |     |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
+|     |     |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
+| 0.3 |     |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
+|     |     |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
+|     |     |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
+| 0.4 |     |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
+|     |     |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
+|     |     |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
+| 0.5 |     |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
+|     |     |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
+|     |     |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
+| 0.6 |     |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
+|     |     |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
+|     |     |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
+| 0.7 |     |     |     |     |     |     |RR=1 | 0.88| 0.78|
+|     |     |     |     |     |     |     |OR=1 | 0.58| 0.26|
+|     |     |     |     |     |     |     |SOR=1| 0.76| 0.51|
+| 0.8 |     |     |     |     |     |     |     |RR=1 | 0.89|
+|     |     |     |     |     |     |     |     |OR=1 | 0.44|
+|     |     |     |     |     |     |     |     |SOR=1| 0.67|
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「この表、いっぱい数字があって見方がよくわからないな。対角のところがRR=OR=SOR=1になるのは、$\pi_1$と$\pi_2$が同じ値だからだよね」
+:::
+
+::: voice-father
+お父さん「ごめんごめん、説明が必要だよね。RRに近いのは、ORとSORのどっちかをみてほしいんだ。さっき話した通り、古い教科書ではオッズ比はリスク比の近似だって教えるけど、実際にいろんな組み合わせで計算すると、そうならないことがある。っていうか、表をみるとRRとOR、結構ずれてない？むしろオッズ比の平方根をとった方が、近い値になるよっていう指摘もあるんだ（VanderWeele 2017）」
+:::
+
 ::: voice-daughter
 私「平方根なんて論文書くとき勝手に計算していいのかね」
 :::
 
 ::: voice-father
-お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。Methodsで説明していれば。でも、ふつうのコホート研究をするんだったら、リスク比を計算するのが素直だと思うけど」
+お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。推定方法の一種として、論文のMethodsで説明していればね。でも、よっぽど特殊な状況じゃなければ、リスク比を計算するのが素直だと思うけど。前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -245,7 +253,7 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 
 ### 文献
 
-- Furukawa TA, Guyatt GH, Griffith LE. Can we individualize the ‘number needed to treat’? An empirical study of summary effect measures in meta-analysis. Int J Epidemiol 2002; 31: 72-6
+- VanderWeele T. On a square-root transformation of the odds ratio for a common outcome. Epidemiology 2017 ;28(6):e58–e60
 
 ### Continuation of their story
 
