--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -248,7 +248,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差やKaplan-Meier曲線）と相対指標（リスク比やハザード比）の両方を示したり、生存曲線でグラフにするのが正解なんじゃないかな」
+お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差）と相対指標（リスク比やハザード比）の両方を示したり、Kaplan-Meier曲線やAalen-Johansen曲線をグラフにするのが正解なんじゃないかな」
 :::
 ::::::::::::::::::::::::::::::::: 
 
