--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -187,7 +187,7 @@ a:hover {
 |----------|-----|-----|
 | 発症あり |  A人|  B人|
 | 発症なし |  C人|  D人|
-|発症リスク|\pi_1|\pi_2|
+|発症リスク|$\pi_1$|$\pi_2$|
 
 この表では人数や割合を、具体的な数字ではなく、A、B、C、Dや群1・群2の発症リスク$\pi_1$と$\pi_2$を使って表しています。2群ごとの割合$\pi_1$と$\pi_2$の比較では、以下のような指標が用いられます。
 
@@ -207,7 +207,7 @@ a:hover {
 :::
 
 ::: {.callout-note title="治療後のリスクを比較するための指標"}
-特に、2種類の治療のどちらが有効か評価する状況では、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボを受けていると考えてください。
+特に、2種類の治療のどちらが有効か調べるために比較するケースでは、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボを受けていると考えてください。
 
 -   Number needed to treat（NNT）
 
