--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -150,8 +150,28 @@ a:hover {
 ### リスク差、リスク比、オッズ比、どれを使う？
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「お父さん、なにか甘いものない？お腹すいちゃって」
+:::
+
 ::: voice-father
-お父さん「医学部で習ったことがあるかもしれないけど、コホート研究とリスクが疫学の基本なんだ。だから公衆衛生や臨床研究をしている人の間では、オッズ比よりリスク比の方がわかりやすいとされている。一方でね、統計学で注目するのは、それぞれの指標の数学的な性質なんだ。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じって言ったらいいかな」
+お父さん「大福だったら買い置きがあるよ。コーヒーとお茶、どっちにする？」
+:::
+
+::: voice-daughter
+私「コーヒー。ミルクも入れて。お茶もいいけど、統計の話を聞きたいときはコーヒーの気分なんだ。このあいだも、疫学で使う統計の話をしてくれたでしょ。でも、医学部で講義を受けたのが昔すぎてさ。疫学ってなにか忘れちゃったな」
+:::
+
+::: voice-father
+お父さん「疫学か。疫学は、集団における病気について調べる分野だよね。病気の原因を調べたり、予防方法や公衆衛生対策を立てたりする。がん、循環器、感染症など扱う病気によってだいぶ違うよね。まあ、疫学の基本はなにかっていったら、コホート研究とリスクかな」
+:::
+
+::: voice-daughter
+私「そうだったね、最初の話題はワクチンの有効率だったけど、あれも発症リスクの指標だった。後はリスク比、オッズ比、ハザード比だっけ？」
+:::
+
+::: voice-father
+お父さん「そんな話をしたね。じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学で注目するのは、それぞれの指標の数学的な性質なんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
 :::
 
 ::: voice-daughter
@@ -163,11 +183,11 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「へー。それは困るじゃない。層別なんてしたことないけど」
+私「ケース・コントロール研究って、データベースとかを使って後ろ向きに調査するやつね。これも疫学。不自然な数字になるのは困るじゃない。層別なんてしたことないけど」
 :::
 
 ::: voice-father
-お父さん「次の2つの表を比べてみてよ」
+お父さん「そうだね、次の2つの表は層別する前とする後の結果なんだけど、比べてみてよ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -248,14 +268,55 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差）と相対指標（リスク比やハザード比）の両方を示したり、Kaplan-Meier曲線やAalen-Johansen曲線をグラフにするのが正解なんじゃないかな」
+お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、絶対指標（リスク差）と相対指標（リスク比やハザード比）の両方を示したり、Kaplan-Meier曲線やAalen-Johansen曲線をグラフにするのが正解なんじゃないかな。数字しか出せないなら、いちばんバランスがいいのは、リスク差+リスク比かもね」
 :::
 ::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
+
+リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（glm関数）を用いる方法です。リンク関数を選ぶことで、リスク差（link="identity"）、リスク比（link="log"）、オッズ比（link="logit"）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
+
+```{r warning=FALSE}
+dat <- data.frame(
+  treat = factor(c("palliative", "palliative", "chemotherapy", "chemotherapy"), levels = c("palliative", "chemotherapy")),
+  death = c(1, 0, 1, 0),
+  n     = c(30, 20, 15, 35)
+)
+dat
+
+fit_identity <- glm(
+  death ~ treat,
+  family  = binomial(link = "identity"),
+  weights = n,
+  data    = dat
+)
+risk_difference <- coef(fit_identity)[["treatchemotherapy"]]
+print(risk_difference)
+
+fit_log <- glm(
+  death ~ treat,
+  family  = binomial(link = "log"),
+  weights = n,
+  data    = dat
+)
+risk_ratio <- exp(coef(fit_log)[["treatchemotherapy"]])
+print(risk_ratio)
+
+fit_logit <- glm(
+  death ~ treat,
+  family  = binomial(link = "logit"),
+  weights = n,
+  data    = dat
+)
+odds_ratio <- exp(coef(fit_logit)[["treatchemotherapy"]])
+print(odds_ratio)
+```
+:::
 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-2値データの解析で用いられるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（回帰係数の指数がオッズ比）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
+一般化線型モデル（田中2022）の一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
 
 1.  ロジスティック回帰を用いてリスク比を計算できる
 2.  ロジスティック回帰を用いてリスク比を計算できない
@@ -270,6 +331,8 @@ a:hover {
 ### 文献
 
 - Furukawa TA, Guyatt GH, Griffith LE. Can we individualize the ‘number needed to treat’? An empirical study of summary effect measures in meta-analysis. Int J Epidemiol 2002; 31: 72-6
+
+- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### Continuation of their story
 
