--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -180,25 +180,31 @@ a:hover {
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="寄与割合とその関連指標"}
-疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
+疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction/excess fraction）という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団をターゲットとするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
 曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
--   Excess fraction（またはrisk fraction）
+-   Excess fraction
 
     $EF=\frac{\pi_1-\pi_2}{\pi_1}=1-\frac{1}{RR}$
 
-一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
+また、excess fractionのターゲット集団を群1から集団全体（群1+群2）にした指標は、population attributable fractionと呼ばれています。$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
+
+-   Population attributable fraction
+
+    $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+
+その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
 
 -   Preventable fraction
 
     $PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
 
-| 指標 | 分母（ターゲット集団） | 何を表す？ | いつ使う？ |
+| 指標 | ターゲット集団 | 何を表す？ | いつ使う？ |
 |------|------|---------------------------|-------------|------------|
-| Excess fraction（寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
-| Preventable fraction（予防寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
-| Population attributable fraction（集団寄与割合） | **全員**（集団全体） | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
+| Excess fraction（寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
+| Preventable fraction（予防寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
+| Population attributable fraction（集団寄与割合） | **曝露+非曝露** | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
 :::
 
 
@@ -248,7 +254,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そう。つまり、陽性2人と陰性2人のどちらをターゲットにするかで、データは同じでも、根治切除の生存期間に寄与する割合が変わってくる。ここが寄与割合の複雑なところなんだ。さっきのexcess fractionは、この例でいうと根治切除できなかった2人をターゲットと考えている。Preventable fractionのターゲットは、根治切除できた2人に対応している」
+お父さん「そう。つまり、陽性2人と陰性2人のどちらをターゲットにするかで、データは同じでも、根治切除の生存期間に寄与する割合が変わってくる。ここが寄与割合の複雑なところなんだ。この例では生存期間で説明したけど、疾患リスクでもターゲット集団に依存する点は同じ。Excess fractionは、この例でいうと根治切除できなかった2人をターゲットと考えている。Preventable fractionのターゲットは、根治切除できた2人に対応している」
 :::
 
 ::: voice-daughter
@@ -256,7 +262,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「いや？効果の指標にはどれも、表に出ないだけでターゲット集団がある。たとえば術後の大腸がん患者を対象にランダム化臨床試験をして、補助化学療法をすると死亡リスク差が-5%になったとするでしょ。これって、術後の大腸がん患者全体に補助化学療法をすべきって解釈にならない？」
+お父さん「そういうわけでもないんだ。効果の指標にはどれも、表に出ないだけでターゲット集団がある。たとえば術後の大腸がん患者を対象にランダム化臨床試験をして、補助化学療法をすると死亡リスク差が-5%になったとするでしょ。これって、術後の大腸がん患者全体に補助化学療法をすべきって解釈にならない？」
 :::
 
 ::: voice-daughter
@@ -320,7 +326,7 @@ a:hover {
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることもあります。先ほど用いたがん検診の例で考えましょう。仮にがん検診の感度が100%だったら、先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、どれくらい減ると期待されるでしょうか。
+寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることもあります（population attributable fraction）。先ほど用いたがん検診の例で考えましょう。仮にがん検診の精度が高くなって、感度を100%にできたとしましょう。先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、4人のうち、どのくらい減ると期待されるでしょうか。
 
 1.  0%
 2.  33%
@@ -333,7 +339,7 @@ a:hover {
 
 この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
 
-この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を$p$で書くと、population attributable fractionは、以下の式で表されます。
+この計算は、集団全体をターゲットとする寄与割合を求めていることに他なりません。集団全体における曝露割合を$p$で書くと、population attributable fractionは、以下の式で表されます。
 
 $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
@@ -358,6 +364,8 @@ $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
 [Clinical trial III](clinical-trial-3.qmd)
 
+[Clinical trial IV](clinical-trial-4.qmd)
+
 [Epidemiology I](epidemiology-1.qmd)
 
 [Epidemiology II](epidemiology-2.qmd)
@@ -365,6 +373,8 @@ $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 [Epidemiology III](epidemiology-3.qmd)
 
 [Epidemiology IV](epidemiology-4.qmd)
+
+[Epidemiology V](epidemiology-5.qmd)
 
 [Regression I](logistic-regression-1.qmd)
 
